# projetoPPP

./: CMakeLists.txt  Menus.c  PlacesList.c  PointsOfInterestList.c  README.md  StudentsList.c  TripList.c  estruturas.c  estruturas.h  ficheiros.c  ficheiros.h  files.c  funcoes.c  funcoes.h  functions.c  main.c  makefile  structs.c
Headers/: Menus.h  PlacesList.h  PointsOfInterestList.h  StudentsList.h  TripList.h  files.h  functions.h  structs.h
Info/: Places.txt  Places_backup.txt  README.md  Students.txt  Students_backup.txt
Makefile/: makefile
